:bulb: docs: Modified files handlers and api routes
