# internal/adapters/delivery/http/handlers/user_handler.go
@@ -22,7 +22,7 @@ type UserHandler struct {
 // @Param userDTO body request.UserDTO true "Detalhes do usuário a ser criado"
 // @Success 200 {object} response.InfoResponse "Usuário criado com sucesso"
 // @Failure 400 {object} response.ErrorResponse "Erro ao criar usuário"
-// @Router /users [post]
+// @Router /user [post]
 func (instance UserHandler) CreateUser(context echo.Context) error {
 	var userDTO request.UserDTO
 
@@ -52,7 +52,7 @@ func (instance UserHandler) CreateUser(context echo.Context) error {
 // @Param userDTO body request.UserDTO true "Detalhes do usuário para login"
 // @Success 200 {object} response.InfoResponse "Usuário logado com sucesso"
 // @Failure 400 {object} response.ErrorResponse "Erro ao realizar login"
-// @Router /users/login [post]
+// @Router /user/login [post]
 func (instance UserHandler) LoginUser(context echo.Context) error {
 	var userDTO request.UserDTO
 
@@ -75,10 +75,10 @@ func (instance UserHandler) LoginUser(context echo.Context) error {
 // @Description Retorna uma lista de todos os usuários registrados
 // @Tags Usuário
 // @Produce json
-// @Param Authorization header string true "Token de autenticação do usuário"
+// @Security bearerAuth 
 // @Success 200 {array} response.User
 // @Failure 400 {object} response.ErrorResponse "Erro ao listar usuários"
-// @Router /users [get]
+// @Router /user [get]
 func (instance UserHandler) ListAllUsers(context echo.Context) error {
 	token := context.Request().Header.Get("Authorization")
 
@@ -109,7 +109,7 @@ func (instance UserHandler) ListAllUsers(context echo.Context) error {
 // @Param Authorization header string true "Token de autenticação do usuário"
 // @Success 200 {object} response.User
 // @Failure 400 {object} response.ErrorResponse "Erro ao obter detalhes do usuário"
-// @Router /users/{id} [get]
+// @Router /user/{id} [get]
 func (instance UserHandler) GetUserByID(context echo.Context) error {
 	id := context.Param("id")
 
@@ -138,7 +138,7 @@ func (instance UserHandler) GetUserByID(context echo.Context) error {
 // @Param Authorization header string true "Token de autenticação do usuário"
 // @Success 200 {array} response.User
 // @Failure 400 {object} response.ErrorResponse "Erro ao obter usuários por nome"
-// @Router /users/name/{name} [get]
+// @Router /user/name/{name} [get]
 func (instance UserHandler) GetUsersByName(context echo.Context) error {
 	name := context.Param("name")
 	token := context.Request().Header.Get("Authorization")
@@ -170,7 +170,7 @@ func (instance UserHandler) GetUsersByName(context echo.Context) error {
 // @Param email path string true "Email do usuário"
 // @Param Authorization header string true "Token de autenticação do usuário"
 // @Success 423 {object} response.InfoResponse "Atualização de usuário não implementada ainda"
-// @Router /users/{email} [put]
+// @Router /user/{email} [put]
 func (instance UserHandler) UpdateUserByEmail(context echo.Context) error {
 	return context.JSON(http.StatusLocked, response.InfoResponse{Message: "Not implemented yet"})
 }
@@ -183,7 +183,7 @@ func (instance UserHandler) UpdateUserByEmail(context echo.Context) error {
 // @Param Authorization header string true "Token de autenticação do usuário"
 // @Success 200 {object} response.InfoResponse "Campo admin do usuário foi atualizado"
 // @Failure 400 {object} response.ErrorResponse "Erro ao atualizar status de administrador do usuário"
-// @Router /users/admin/{id_user} [put]
+// @Router /user/admin/{id_user} [put]
 func (instance UserHandler) UpdateAdminByUserID(context echo.Context) error {
 	id := context.Param("id_user")
 	idParse, err := uuid.Parse(id)
@@ -211,7 +211,7 @@ func (instance UserHandler) UpdateAdminByUserID(context echo.Context) error {
 // @Param Authorization header string true "Token de autenticação do usuário"
 // @Success 200 {object} response.InfoResponse "Usuário deletado com sucesso"
 // @Failure 400 {object} response.ErrorResponse "Erro ao deletar usuário"
-// @Router /users/email/{email} [delete]
+// @Router /user/email/{email} [delete]
 func (instance UserHandler) DeleteUserByEmail(context echo.Context) error {
 	email := context.Param("email")
 	token := context.Request().Header.Get("Authorization")
